# wmemchr

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/src/: bench.rs  count.rs  input.rs  u16.rs  u32.rs
src/: char.rs  fallback.rs  kernel.rs  lib.rs  macros.rs  naive.rs  simd.rs
src/fallback/: mod.rs  packed.rs
src/tests/: mod.rs  quickcheck.rs  simple.rs
src/x86/: mod.rs
src/x86/avx2/: i16.rs
src/x86/sse2/: i16.rs  mod.rs
src/x86_64/: mod.rs
src/x86_64/avx2/: i16.rs  i32.rs
src/x86_64/evex/: i16.rs  i32.rs
src/x86_64/sse2/: i16.rs  i32.rs  mod.rs
tests/: quickcheck.rs  simple.rs
