[package]
name = "wmemchr"
version = "0.1.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "Safe generic alternative to wmemchr."
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/Juici/wmemchr"
documentation = "https://docs.rs/wmemchr"

build = "build.rs"

[lib]
name = "wmemchr"
bench = false

[workspace]
members = ["bench"]

[features]
default = ["std"]
std = []
unstable = []

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
wchar = "0.11"
quickcheck = "1.0"

[build-dependencies]
autocfg = "1.0"

[profile.test]
opt-level = 3
debug = 2
debug-assertions = true
